# dontnote-rocket

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2023-03-22-224754_create_users/: up.sql
migrations/2023-03-23-123828_create_notes/: up.sql
src/: auth.rs  database.rs  main.rs  schema.rs
src/graphql/: context.rs  mod.rs  routes.rs
src/graphql/guards/: logged_user.rs  mod.rs
src/graphql/mutation/: create_note.rs  create_user.rs  mod.rs  user_login.rs  user_register.rs
src/graphql/resolver/: mod.rs  note.rs  notes.rs  user.rs  users.rs
src/model/: mod.rs  note.rs  user.rs
