[package]
name = "dontnote-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-graphql = { version = "5.0.6", features = ["tokio", "uuid"] }
async-graphql-rocket = "5.0.6"
async-trait = "0.1.64"
biscuit = "0.5.0"
dotenv = "0.15.0"
rocket = "0.5.0-rc.2"
serde = { version = "1.0.152", features = ["serde_derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full", "tracing"] }
uuid = "1.3.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid"] }

